kubernetes/apps/hermes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes
  namespace: hermes
spec:
  parentRefs:
    - name: main
      namespace: network
      sectionName: https-ovh
  hostnames:
    - "hermes.zlayahome.ovh"
  rules:
    - backendRefs:
        - name: hermes
          port: 9119
